buggery/tests/errors/too_many_params.bgr
default:
  other

other(A):
  $ ls
